--- a/app/src/main/res/layout/header_menu_lateral.xml
+++ b/app/src/main/res/layout/header_menu_lateral.xml
@@ -10,12 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/wallpaper1"/>
-
+    <!--
     <io.alterac.blurkit.BlurLayout
         android:id="@+id/blur_fondo"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
-    </io.alterac.blurkit.BlurLayout>
+    </io.alterac.blurkit.BlurLayout> -->
 
     <LinearLayout
         android:layout_width="match_parent"
