--- a/app/src/main/res/anim/slide_in_left.xml
+++ b/app/src/main/res/anim/slide_in_left.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android" >
+    <alpha android:fromAlpha="0"
+        android:toAlpha="1"
+        android:duration="400"/>
     <translate
         android:duration="700"
-        android:fromXDelta="-100%"
+        android:fromXDelta="200%"
         android:toXDelta="0%" >
     </translate>
 </set>
