Desarrollo de implementacion de vistas para el menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".Activitys.MainActivity">
+        tools:context=".MainActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,6 +21,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+
 
             <ScrollView
                 android:layout_width="match_parent"
