--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/t1"
-                android:layout_width="wrap_content"
+                android:layout_width="230sp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10sp"
                 android:layout_marginTop="5sp"
