--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="rojo">#E74C3C</color>
     <color name="grisCasiBlanco">#F6F6F6</color>
     <color name="elRealGrisGozu">#E5E5E5</color>
+    <color name="facebook">#1778F2</color>
+
 </resources>
