--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,11 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
         <ImageView
             android:layout_marginTop="50sp"
             android:layout_width="300sp"
-            android:layout_height="70sp"
+            android:layout_height="80sp"
             android:src="@drawable/logo_tecfood"/>
 
         <TextView
@@ -33,11 +34,11 @@
             android:id="@+id/login_phone"
             android:layout_width="300sp"
             android:layout_height="65sp"
-            android:layout_marginTop="50sp"
-            android:backgroundTint="@color/teal_200"
-            android:drawableLeft="@android:drawable/ic_dialog_alert"
+            android:layout_marginTop="30sp"
+            android:backgroundTint="@color/naranja_claro"
+            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
             android:padding="10dp"
-            android:text="Continue whit your Phone"
+            android:text="Continuar con mi telefono"
             android:textStyle="bold" />
 
         <Button
@@ -45,11 +46,11 @@
             android:layout_width="300sp"
             android:layout_height="65sp"
             android:layout_marginTop="5sp"
-            android:backgroundTint="@color/purple_700"
-            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:backgroundTint="@color/facebook"
+            android:drawableLeft="@drawable/icon_facebook"
             android:padding="10dp"
-            android:text="Continue whit Facebook"
-            android:textStyle="bold" />
+            android:text="Continua con Facebook"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txt_login_invitado"
@@ -58,7 +59,8 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/naranja_claro"
-            android:text="Continuar como Invitado"/>
+            android:text="Continuar como Invitado"
+            android:textStyle="bold"/>
 
         <ImageButton
             android:id="@+id/btn_publicity"
