--- a/app/src/main/res/layout/item_restaurante.xml
+++ b/app/src/main/res/layout/item_restaurante.xml
@@ -15,12 +15,12 @@
         android:layout_marginBottom="20sp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:padding="10sp">
             <TextView
                 android:id="@+id/nombre_rest"
-                android:layout_width="wrap_content"
+                android:layout_width="240sp"
                 android:layout_height="wrap_content"
                 android:text="Restaurante"
                 android:textSize="30sp"
